--- a/iOS/InternalLibrary.iOS.csproj
+++ b/iOS/InternalLibrary.iOS.csproj
@@ -126,6 +126,7 @@
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
     <InterfaceDefinition Include="Main.storyboard" />
+    <InterfaceDefinition Include="ViewControllers\BookListStoryboard.storyboard" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
