--- a/InternalLibrary/InternalLibrary.csproj
+++ b/InternalLibrary/InternalLibrary.csproj
@@ -15,6 +15,8 @@
      <ProjectReference Include="..\XToolkit.WhiteLabel\Softeq.XToolkit.WhiteLabel\Softeq.XToolkit.WhiteLabel.csproj">
        <ReferenceSourceTarget>ProjectReference</ReferenceSourceTarget>
      </ProjectReference>
+     <ProjectReference Include="..\XToolkit.WhiteLabel\Softeq.XToolkit.WhiteLabel.Essentials\Softeq.XToolkit.WhiteLabel.Essentials.csproj" />
+     <ProjectReference Include="..\XToolkit.WhiteLabel\Softeq.XToolkit.Connectivity\Softeq.XToolkit.Connectivity.csproj" />
    </ItemGroup>
    <ItemGroup>
      <Compile Remove="Properties\AssemblyInfo.cs" />
