--- a/Droid/InternalLibrary.Droid.csproj
+++ b/Droid/InternalLibrary.Droid.csproj
@@ -58,6 +58,7 @@
     <None Include="Resources\AboutResources.txt" />
     <None Include="Properties\AndroidManifest.xml" />
     <None Include="Assets\AboutAssets.txt" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml" />
