--- a/iOS/InternalLibrary.iOS.csproj
+++ b/iOS/InternalLibrary.iOS.csproj
@@ -83,6 +83,9 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.iOS" />
+    <Reference Include="DryIoc">
+      <HintPath>..\packages\DryIoc.dll.4.5.1\lib\netstandard2.0\DryIoc.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InternalLibrary\InternalLibrary.csproj">
@@ -113,30 +116,6 @@
     <ProjectReference Include="..\XToolkit.WhiteLabel\Softeq.XToolkit.WhiteLabel.iOS\Softeq.XToolkit.WhiteLabel.iOS.csproj">
       <Project>{CC89DBC6-E68A-4C85-91C4-E276D3BC3C2E}</Project>
       <Name>Softeq.XToolkit.WhiteLabel.iOS</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\XToolkit.WhiteLabel\Softeq.XToolkit.WhiteLabel.Essentials\Softeq.XToolkit.WhiteLabel.Essentials.csproj">
-      <Project>{756F33F5-B53D-4C9B-B761-89EE7544E81F}</Project>
-      <Name>Softeq.XToolkit.WhiteLabel.Essentials</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\XToolkit.WhiteLabel\Softeq.XToolkit.WhiteLabel.Essentials.iOS\Softeq.XToolkit.WhiteLabel.Essentials.iOS.csproj">
-      <Project>{23AA0E71-BF8F-47A8-A915-C8AC4841E064}</Project>
-      <Name>Softeq.XToolkit.WhiteLabel.Essentials.iOS</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\XToolkit.WhiteLabel\Softeq.XToolkit.Permissions\Softeq.XToolkit.Permissions.csproj">
-      <Project>{2EBE805C-D6BA-4B80-9DD9-28DB0195CF51}</Project>
-      <Name>Softeq.XToolkit.Permissions</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\XToolkit.WhiteLabel\Softeq.XToolkit.Permissions.iOS\Softeq.XToolkit.Permissions.iOS.csproj">
-      <Project>{7EB2ADA9-C599-4644-AC6B-109F1AEED19F}</Project>
-      <Name>Softeq.XToolkit.Permissions.iOS</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\XToolkit.WhiteLabel\Softeq.XToolkit.Connectivity\Softeq.XToolkit.Connectivity.csproj">
-      <Project>{9F66FA6F-2AC0-454F-B083-64E105079022}</Project>
-      <Name>Softeq.XToolkit.Connectivity</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\XToolkit.WhiteLabel\Softeq.XToolkit.Connectivity.iOS\Softeq.XToolkit.Connectivity.iOS.csproj">
-      <Project>{E3CCEEA3-C0B0-47B0-B414-2D6C18AC100A}</Project>
-      <Name>Softeq.XToolkit.Connectivity.iOS</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
