--- a/InternalLibrary/InternalLibrary.csproj
+++ b/InternalLibrary/InternalLibrary.csproj
@@ -26,5 +26,6 @@
    </ItemGroup>
    <ItemGroup>
      <Folder Include="ViewModels\" />
+     <Folder Include="Services\" />
    </ItemGroup>
  </Project>
