--- a/iOS/InternalLibrary.iOS.csproj
+++ b/iOS/InternalLibrary.iOS.csproj
@@ -131,6 +131,8 @@
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
     <InterfaceDefinition Include="ViewControllers\BookListStoryboard.storyboard" />
     <InterfaceDefinition Include="Views\BookTableViewCell.xib" />
+    <InterfaceDefinition Include="ViewControllers\BookStoryboard.storyboard" />
+    <InterfaceDefinition Include="ViewControllers\BookViewController.xib" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -147,6 +149,10 @@
     <Compile Include="Views\BookTableViewCell.cs" />
     <Compile Include="Views\BookTableViewCell.designer.cs">
       <DependentUpon>BookTableViewCell.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ViewControllers\BookViewController.cs" />
+    <Compile Include="ViewControllers\BookViewController.designer.cs">
+      <DependentUpon>BookViewController.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
