--- a/InternalLibrary/InternalLibrary.csproj
+++ b/InternalLibrary/InternalLibrary.csproj
@@ -28,4 +28,8 @@
      <Folder Include="ViewModels\" />
      <Folder Include="Services\" />
    </ItemGroup>
+   <ItemGroup>
+     <PackageReference Include="Xamarin.Auth" Version="1.7.0" />
+     <PackageReference Include="Google.Apis.Sheets.v4" Version="1.50.0.2175" />
+   </ItemGroup>
  </Project>
