--- a/InternalLibrary/InternalLibrary.csproj
+++ b/InternalLibrary/InternalLibrary.csproj
@@ -31,5 +31,6 @@
    <ItemGroup>
      <PackageReference Include="Xamarin.Auth" Version="1.7.0" />
      <PackageReference Include="Google.Apis.Sheets.v4" Version="1.50.0.2175" />
+     <PackageReference Include="Xamarin.FFImageLoading" Version="2.4.11.982" />
    </ItemGroup>
  </Project>
