--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -1,9 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DryIoc.dll" version="4.7.3" targetFramework="xamarinios10" />
   <package id="Google.Apis" version="1.50.0" targetFramework="xamarinios10" />
   <package id="Google.Apis.Auth" version="1.50.0" targetFramework="xamarinios10" />
   <package id="Google.Apis.Core" version="1.50.0" targetFramework="xamarinios10" />
   <package id="Google.Apis.Sheets.v4" version="1.50.0.2175" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="xamarinios10" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="xamarinios10" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="WebP.Touch" version="1.0.8" targetFramework="xamarinios10" />
   <package id="Xamarin.Auth" version="1.7.0" targetFramework="xamarinios10" />
+  <package id="Xamarin.Essentials" version="1.6.1" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading" version="2.4.11.982" targetFramework="xamarinios10" />
 </packages>
