--- a/Droid/InternalLibrary.Droid.csproj
+++ b/Droid/InternalLibrary.Droid.csproj
@@ -333,6 +333,7 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AndroidGoogleAPIConfiguration.cs" />
+    <Compile Include="GoogleAuthInterceptor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
