Main activity deleted

--- a/Droid/InternalLibrary.Droid.csproj
+++ b/Droid/InternalLibrary.Droid.csproj
@@ -329,7 +329,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AndroidGoogleAPIConfiguration.cs" />
@@ -345,7 +344,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\Main.axml" />
     <AndroidResource Include="Resources\values\Strings.xml" />
     <AndroidResource Include="Resources\mipmap-hdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-mdpi\Icon.png" />
@@ -357,6 +355,10 @@
       <Generator></Generator>
     </AndroidResource>
     <AndroidResource Include="Resources\values\styles.xml">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\BookList.xml">
       <SubType></SubType>
       <Generator></Generator>
     </AndroidResource>
