--- a/InternalLibrary.Forms/InternalLibrary.Forms/InternalLibrary.Forms.csproj
+++ b/InternalLibrary.Forms/InternalLibrary.Forms/InternalLibrary.Forms.csproj
@@ -18,4 +18,10 @@
     <Folder Include="ViewModels\" />
     <Folder Include="Servsices\" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="MainPage.xaml.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Remove="MainPage.xaml" />
+  </ItemGroup>
 </Project>
