--- a/InternalLibrary.Forms/InternalLibrary.Forms.Android/InternalLibrary.Forms.Android.csproj
+++ b/InternalLibrary.Forms/InternalLibrary.Forms.Android/InternalLibrary.Forms.Android.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DroidBootstrapper.cs" />
+    <Compile Include="Activities\WebAuthenticationCallbackActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -85,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
+    <Folder Include="Activities\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InternalLibrary.Forms\InternalLibrary.Forms.csproj">
