--- a/InternalLibrary.Forms/InternalLibrary.Forms.iOS/Info.plist
+++ b/InternalLibrary.Forms/InternalLibrary.Forms.iOS/Info.plist
@@ -2,6 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+        <key>CFBundleURLTypes</key>
+        <array>
+            <dict>
+                <key>CFBundleURLName</key>
+                <string>xamarinessentials</string>
+                <key>CFBundleURLSchemes</key>
+                <array>
+                    <string>xamarinessentials</string>
+                </array>
+                <key>CFBundleTypeRole</key>
+                <string>Editor</string>
+            </dict>
+        </array>
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>1</integer>
