--- a/InternalLibrary.Forms/InternalLibrary.Forms/InternalLibrary.Forms.csproj
+++ b/InternalLibrary.Forms/InternalLibrary.Forms/InternalLibrary.Forms.csproj
@@ -22,6 +22,7 @@
     <Folder Include="ViewModels\" />
     <Folder Include="Servsices\" />
     <Folder Include="Models\" />
+    <Folder Include="Enums\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="MainPage.xaml.cs" />
